--- a/app/partials/branding.html
+++ b/app/partials/branding.html
@@ -1,4 +1,4 @@
-<section class="jumbotron" ng-class="{'active': isActive('catalog')}" ng-show="user.Company.LogoUrl">
+<!--<section class="jumbotron" ng-class="{'active': isActive('catalog')}" ng-show="user.Company.LogoUrl">
     <div class="container">
         <h2 class="thumbnail" ng-show="Four51User.isAuthenticated()">
             <a href="catalog">
@@ -8,4 +8,8 @@
             <homemessage />
         </h2>
     </div>
+</section>-->
+<section class="carousel-wrapper" ng-show="isActive('catalog')">
+    <customcarousel></customcarousel>
 </section>
+
