--- a/app/partials/controls/orderSummary.html
+++ b/app/partials/controls/orderSummary.html
@@ -9,8 +9,9 @@
         <loadingindicator ng-show="couponRemoveIndicator" title="{{'Please wait while we remove your promotion code' | r | xlat}}" />
         <orderconfirmationmessage />
         <p>
-            <span class="text-info">{{'Items' | r | xlat}}</span>
-            <span class="pull-right">{{currentOrder.LineItems.length}}</span>
+            <!--<span class="text-info">{{'Items' | r | xlat}}</span>
+            <span class="pull-right">{{currentOrder.LineItems.length}}</span>-->
+            <checkoutitemsummary></checkoutitemsummary>
         </p>
         <p ng-if="!(user.Permissions.contains('HidePricing'))">
             <span class="text-info">{{'Subtotal' | r | xlat}}</span>
@@ -63,8 +64,9 @@
                 <span class="help-block text-left"><small>{{'Provide an email address if you would like to receive ' + ('Notification' | r) + 's concerning this order.' | r | xlat}}</small></span>
             </div>
         </div>
-        <button class="btn btn-default" redirect="/security">
+        <!--<button class="btn btn-default" redirect="/security">
             <span class="fa fa-info-circle"></span> {{'Concerned About Security?' | r | xlat}}
-        </button>
+        </button>-->
+        <securitymodal></securitymodal>
     </div>
 </div>
